# gakushocker

./: .dockerignore  .gitignore  README.md  docker-compose.test.yaml  docker-compose.yml  table.drawio
.github/workflows/: test.yaml
app/: .eslintrc.json  .eslintrc.yml  .graphqlconfig  Dockerfile  README.md  codegen.yml  graphql.schema.json  index.html  next.config.js  package.json  schema.graphql  tsconfig.json  vite.config.js  vite.config.ts
app/.storybook/: main.js  preview.js
app/graphql/: findProduct.graphql  getAllMenu.graphql  getMenuById.graphql  listMenu.graphql  listProduct.graphql  schema.graphql
app/src/: App.tsx
app/src/component/: Card.tsx
app/src/components/: Header.tsx  Menu.tsx  MenuItem.tsx  OrderTable.tsx
app/src/graphql/: createOrder.graphql  (+1 more)
backend/: Cargo.toml  schema.graphql  schema.sql
backend/src/: main.rs
config/: postgresql.conf
docs/: usecase.puml
nginx/: nginx.conf
script/: 01_initialize.sql  02_create_table.sql
server/: .env.test  Cargo.toml  Dockerfile  README.md  schema.graphql  schema.sql
server/docs/: class.puml
server/src/: database.rs  lib.rs  main.rs
server/src/controllers/: router.rs
server/src/controllers/auth/: auth.rs
server/src/controllers/presenters/: mutation.rs  query.rs
server/src/entities/: order.rs  product.rs  user.rs
server/src/model/: mutation.rs  query.rs
server/src/presenters/: mutation.rs  query.rs
server/src/repositories/: order.rs  product.rs  user.rs
server/src/repository_impl/: order.rs  product.rs  user.rs
server/src/usecases/: order.rs  product.rs  user.rs
(+21 files in other folders)
