[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = {version = "5", features = ["chrono"]}
async-graphql-axum = "5"
axum = "0.6"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = "0.4"
dotenvy = "0.15.6"
http = "0.2.8"
tower-http = {version = "0.3.4", features = ["cors"] }
