[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = {version = "5", features = ["chrono", "uuid"]}
async-graphql-axum = "5"
axum = "0.6"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = "0.4"
dotenvy = "0.15.6"
http = "0.2.8"
tower-http = {version = "0.4.0", features = ["cors"] }
anyhow = "1.0.69"
uuid = { version = "1.3.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0.94"
serde = { version = "1.0.153", features = ["derive"] }
axum-extra = { version = "0.7.0", features = ["cookie"] }
jsonwebtoken = "8.2.0"
once_cell = "1.17.1"
